# CTIKG

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ctinexus/: __init__.py  app.py  cti_processor.py  graph_constructor.py  llm_processor.py
ctinexus/config/: config.yaml  cost.json
ctinexus/data/: README.md  data_split.py
ctinexus/data/annotation/: 0-days-exploited-by-commercial-surveillance-vendor-in-egypt.json  apache-erp-0day-underscores-dangers-of-incomplete-patches.json  apple-fixes-first-zero-day-bug-exploited-in-attacks-this-year.json  apts-swarm-zimbra-zero-day-to-steal-government-info-worldwide.json  attackers-exploit-microsoft-office-bug-spyware.json  buckeye-windows-zero-day-exploit.json  budworm-tool-update-telecoms-govt.json  chrome-update-patches-zero-day-vulnerabilities-exploited-at-pwn2own.json  chromeloader-hijacker-threats.json  cisa-urges-patch-11-bug.json  cloaked-ursa-phishing.json  critical-bluetooth-flaw-exposes-android-apple-and-linux-devices-to-keystroke-injection-attack.json  critical-zero-day-in-apache-ofbiz-erp.json  crypto-clipper-targets-portuguese-speakers.json  elusive-toddycat-apt-targets-microsoft-exchange-servers.json  equation-cyberespionage-group_1.json  evasive-jupyter-infostealer-campaign-dangerous-variant.json  everything-you-need-to-know-about-apt-fancy-bear.json  everything-you-need-to-know-about-royal-ransomware.json  fargo-ransomware-attacking-microsoft-sql-servers.json  flax-typhoon-using-legitimate-software-to-quietly-access-taiwanese-organizations.json  follina-msdt-exploit-malware.json  global-teamcity-exploitation-opens-door-to-solarwinds-style-nightmare.json  google-tag-coldriver-russian-phishing-malware.json  government-backed-actors-exploiting-winrar-vulnerability.json  grayfly-china-sidewalk-malware.json  h0lygh0st-ransomware-north-korea.json  hackers-exploiting-old-ms-excel.json  in-depth-look-at-apt35-aka-charming-kitten.json  in-depth-look-at-iranian-apt-muddywater.json  internet-explorer-0-day-exploited-by-north-korean-actor-apt37.json  iran-apt-seedworm-africa-telecoms.json  kasseika-ransomware-uses-antivirus-driver-to-kill-other-antiviruses.json  magento-vulnerability-exploited-to-deploy-persistent-backdoor.json  malware-distributor-storm-0324-facilitates-ransomware-access.json  microsoft-workaround-0day-attack.json  microsoft-zeroday-exploit.json  midnight-blizzard-conducts-targeted-social-engineering-over-microsoft-teams.json  mispadu-banking-trojan-resurfaces.json  mitel-voip-bug-exploited.json  (+30 more)
ctinexus/data/demo/: 3am-ransomware-lockbit.json  an-in-depth-look-at-cuba-ransomware.json  (+74 more)
ctinexus/prompts/: et.jinja  ie.jinja  link.jinja
ctinexus/reports/: report1.txt  report2.txt
ctinexus/storage/: neo4j_loader.py
ctinexus/utils/: gradio_utils.py  http_server_utils.py  model_utils.py  path_utils.py
docs/: cli-guide.md  ollama-guide.md
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_cti_processor.py  test_graph_constructor.py  test_llm_processor.py  test_model_utils.py  test_path_utils.py
(+3 files in other folders)
